--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -4,7 +4,7 @@
   "promptDelete": false,
   "foldHeading": true,
   "newFileLocation": "folder",
-  "newFileFolderPath": "+ Encounters",
+  "newFileFolderPath": "Cards",
   "foldIndent": true,
   "fileSortOrder": "alphabetical",
   "spellcheck": true,
